# Master

./: .gitignore  CMakeListsOLD.txt  LICENSE  README.md
Fortran/: CMakeLists.txt  Makefile  Parameters.nml  PrecisionMod.f90  Program.f90  SubRoutines.f90  TypeCustom.f90
Fortran/Parameters/: Parameters.nml  ParametersTest.nml
Fortran/source/: CMakeLists.txt  PrecisionMod.f90  Program.f90  SubRoutines.f90  TypeCustom.f90
FortranSerial/: CMakeLists.txt
FortranSerial/source/: CMakeListsTemplate.txt  PrecisionMod.f90  Program.f90  SubRoutines.f90  TypeCustom.f90
Julia/: Analysis.jl  InitSetup.jl  InitSetupOptimized.jl
Parameters/: Parameters.nml
